--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - main
-    pull Requests:
+    pull_request:
         branches:
             - main
 
